# x100-cli

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  DEV_REVIEW_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  KARATE_QUICKSTART.md  README.md  SETUP.md  WORKFLOW_IMPLEMENTATION.md  nextstep_report_20251204_004852.md  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SUPPORT.md
.github/workflows/: karate-tests.yml
.x100/: nextstep.json
docs/: AGENT_MANAGEMENT.md  NEXTSTEP_FEATURE_PLAN.md  STEERING.md
resources/: AGENTS.example.md  README.example.md  WORKFLOW.md  WORKFLOW_QUICKSTART.md
resources/doc-templates/: ADR.md  PRD.md
resources/prompts/: design.md
resources/references/: API_DOCUMENTATION.md  DJANGO.md  NEXTJS.md  PRD_CHECKLIST.md  SA_CHECKLIST.md  TECHNICAL_GUIDELINE.md  USER_STORY_GUIDELINE.md  WRITE_PRD_GUIDELINE.md
resources/vscode/: settings.example.json
scripts/: contribute.sh  macos_notify_listener.py  notify.sh  notify_listener.sh
src/: main.py
src/x100_cli/: __init__.py  cli.py  core.py  ui.py
src/x100_template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
templates/: AGENTS.md  checklist-template.md  plan-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  specify.md  tasks.md
templates/steering/: api-standards.md  code-conventions.md  deployment-workflow.md  product.md  security-policies.md  structure.md  tech.md  testing-standards.md
tests/karate/: CHANGELOG.md  INTEGRATION.md  (+3 more)
(+74 files in other folders)
