[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "x100-cli"
version = "0.1.0"
description = "Create high-grade software at speed with AI agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
x100 = "x100_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
