[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "x100-cli"
version = "0.1.1"
description = "Create high-grade software at speed with AI agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.5.0",
    "readchar>=4.2.1",
    "rich>=14.2.0",
    "truststore>=0.10.4",
    "typer>=0.20.0",
]

[project.optional-dependencies]
github = [
    "PyGithub>=2.1.1",
]

[project.scripts]
x100 = "x100_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "markitdown>=0.1.4",
]
